moved return size of neo4j relational prepared handling to runtime