@@ -187,9 +187,10 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
         @Override
         public Enumerator<PolyValue[]> enumerator() {
             return execute(
-                    String.format( "MATCH (n:%s) RETURN %s", entity.name, buildAllQuery() ),
+                    "MATCH (n:%s) RETURN %s".formatted( entity.name, buildAllQuery() ),
                     getTypes(),
-                    Map.of() ).enumerator();
+                    Map.of(),
+                    false ).enumerator();
         }
 
 
@@ -210,7 +211,7 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
          * @param prepared mapping of parameters and their components if they are collections
          */
         @SuppressWarnings("UnusedDeclaration")
-        public Enumerable<PolyValue[]> execute( String query, NestedPolyType types, Map<Long, NestedPolyType> prepared ) {
+        public Enumerable<PolyValue[]> execute( String query, NestedPolyType types, Map<Long, NestedPolyType> prepared, boolean needsPreparedReturn ) {
             Transaction trx = getTrx();
 
             dataContext.getStatement().getTransaction().registerInvolvedAdapter( entity.namespace.store );
@@ -221,12 +222,15 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
 
             List<Result> results = new ArrayList<>();
             if ( dataContext.getParameterValues().size() == 1 ) {
-                results.add( trx.run( query, toParameters( dataContext.getParameterValues().get( 0 ), prepared, false ) ) );
+                String adjustedQuery = needsPreparedReturn ? query + " RETURN 1" : query;
+                results.add( trx.run( adjustedQuery, toParameters( dataContext.getParameterValues().get( 0 ), prepared, false ) ) );
             } else if ( !dataContext.getParameterValues().isEmpty() ) {
+                String adjustedQuery = needsPreparedReturn ? query + " RETURN " + dataContext.getParameterValues().size() : query;
                 for ( Map<Long, PolyValue> value : dataContext.getParameterValues() ) {
-                    results.add( trx.run( query, toParameters( value, prepared, false ) ) );
+                    results.add( trx.run( adjustedQuery, toParameters( value, prepared, false ) ) );
                 }
             } else {
+                String adjustedQuery = needsPreparedReturn ? query + " RETURN 1" : query;
                 results.add( trx.run( query ) );
             }
 
